tests/sksl/errors/UsingInvalidValue.glsl
### Compilation failed:

error: 3: expected 'int', but found '<INVALID>'
error: 4: expected 'int', but found '<INVALID>'
2 errors
